<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, WiiActivity!</string>
    <string name="app_name">wii interface</string>
    <string name="local_host">127.0.0.1</string>
    <string name="port">234</string>
    <string name="start">connect</string>
    <string name="stop">disconnect</string>
	<string name="title">Open Functionality For Android \'s Sensors</string>
<string name="settings">Settings</string>

<string-array name="sensor_delay"><item>fastest</item>
<item>game</item>
<item>ui</item>
<item>normal</item>
</string-array>
</resources>
